# EXAMPLE_WS

./: LICENSE  README.md
basic_pkg/: Dockerfile-python-single-node  Dockerfile-window-single-node  README.md  docker-compose.yml  orfs_package.yaml
basic_pkg/src/: __init__.py
basic_pkg/src/nodes/: core_node.py  listener_node.py  talker_node.py
example_pkg/: README.md  pyproject.toml
example_pkg/example_pkg/: __init__.py
example_pkg/example_pkg/comm_type/actions/: __init__.py
example_pkg/example_pkg/comm_type/msgs/: __init__.py
example_pkg/example_pkg/comm_type/srvs/: __init__.py
example_pkg/example_pkg/launcher/: all_in_one.py
example_pkg/example_pkg/nodes/: action_client.py  action_server.py  publisher_node.py  service_client.py  service_server.py  subscriber_node.py
